Fix filters alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -121,6 +121,12 @@ a:hover {
 
 .sortDropText {
     font-size: 0.8rem!important;
+
+    padding-left: 1rem;
+}
+
+.labelColor {
+    margin-left: 0.5rem!important;
 }
 
 .favText {
